results/SpecGenBench/4-shot/log-BubbleSortDesc-2023_11_27_17_15_18.txt
public class BubbleSortDesc { 
    
    //@ requires array != null;
    //@ ensures (\forall int i; 0 <= i && i < \result.length-1; \result[i] >= \result[i+1]);
    public int[] bubbleSort(int arr[]) {
        int n = arr.length;

        //@ maintaining 0 <= i && i <= n-1;
        //@ maintaining (\forall int k; 0 <= k && k < i; (\forall int m; i <= m && m < n; arr[k] >= arr[m]));
        //@ decreases n-1 - i;
        for (int i = 0; i < n-1; i++) {	

            //@ maintaining 0 <= j && j <= n-i-1;
            //@ maintaining (\forall int k; 0 <= k && k < j; arr[j+1] <= arr[k]);
            //@ decreases n-i-1 - j;
            for (int j = 0; j < n-i-1; j++) {
                if (arr[j+1] > arr[j]) {  
		     swap(j, j + 1, arr); 
                } 
	    }
	} 
	return arr;
    } 

    //@ requires 0 <= x && x < array.length && 0 <= y && y < array.length;
    //@ assignable array[x], array[y];
    //@ ensures array[x] == \old(array[y]) && array[y] == \old(array[x]);
    void swap(int x, int y,  int array[]) {
        int temp;     
        temp = array[x];
        array[x] = array[y];
        array[y] = temp;
    }
}
/home/max/Documents/JMLGPT/tmp/BubbleSortDesc.java:3: error: cannot find symbol
    //@ requires array != null;
                 ^
  symbol:   variable array
  location: class BubbleSortDesc
1 error

